# iterextd

./: Cargo.toml  README.md
benches/: bench_bresenham_circle.rs  bench_extrapolate.rs  bench_gen_circle_points.rs  bench_missing_int.rs  bench_scaling_value.rs  bench_take_skip_cyclic.rs  bench_unique_sort.rs
src/: gen_iterator.rs  integer_scaling_iterator.rs  iter_2d.rs  iterator.rs  lib.rs  slice_modif_iter.rs  slice_modify_iter.rs  structs.rs
tests/: test_adapter.rs  test_adapters.rs  test_circle_bresenham.rs  test_count_freq.rs  test_extrapolate.rs  test_gcd.rs  test_gen_circle_points.rs  test_iter_2d.rs  test_missing_integers.rs  test_modes.rs  test_scaling_iterator_adapter.rs  test_slice_modif_iter.rs  test_slice_modify_iter.rs  test_swap_iter.rs  test_take_skip_cyclic.rs  test_tuple_into_iter.rs  test_tuple_iter.rs  test_tuple_itern.rs  test_unique_sorted.rs
tests/ui/: test_ui_arr_zeroed_non_zero.rs  test_ui_arr_zeroed_non_zero.stderr  test_ui_arr_zeroed_ref.rs  test_ui_arr_zeroed_ref.stderr  test_ui_arr_zeroed_zts.rs  test_ui_arr_zeroed_zts.stderr
