[package]
name = "iterextd"
version = "0.5.0"
rust-version = "1.75.0"
edition = "2021"
authors = ["Karl Wulfert <pic16f877.ccs@emailn.de>"]
readme = "README.md"
repository = "https://github.com/pic16f877ccs/iterextd"
homepage = "https://github.com/pic16f877ccs/iterextd"
license = "MIT"
keywords = ["Iterator", "Adapter", "Collect"]
categories = ["algorithms", "rust-patterns", "data-structures"]
description = "This trait provides additional methods for working with iterators, enhancing their functionality."

[dependencies]
fixedbitset = "0.5.7"
itertools = "0.12.1"
num_convert = "0.7.1"
num-integer = "0.1.46"
num = "0.4.3"

[features]
itern = []

[dev-dependencies]
trybuild = "1.0.83"
criterion = "0.5.1"
approx = "0.5.1"

[[bench]]
name = "bench_missing_int"
harness = false

[[bench]]
name = "bench_unique_sort"
harness = false

[[bench]]
name = "bench_extrapolate"
harness = false

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

